--- a/static/css/home.css
+++ b/static/css/home.css
@@ -9,8 +9,10 @@ html {
 .before-load {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   display: flex;
+  top: 0;
+  left: 0;
   justify-content: center;
   align-items: center;
   background-color: #999;
